--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div id="map" style="display: none;"></div>
         
         <div class="map-controls" id="mapControls" style="display: none;">
-            <button onclick="app.centerMap()">Center</button>
-            <button onclick="app.fitBounds()">Fit All</button>
+            <button onclick="centerMap()">Center</button>
+            <button onclick="fitBounds()">Fit All</button>
         </div>
     </section>
 
