trying to make easier to upload for all of 2025 not just individuals

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
         <div class="upload-area">
             <input type="file" id="photoInput" multiple accept="image/*" style="display: none;">
             <button class="upload-button" onclick="document.getElementById('photoInput').click()">
-                Select Photos from 2024
+                Select Photos from 2025
             </button>
-            <p class="upload-hint">Choose photos with location data to map your journey</p>
+            <p class="upload-hint"> It's quicker to choose all photos - we'll automatically filter for 2025 photos with GPS data</p>
+            <div class="date-info">
+                <small>Looking for photos from January 1, 2025 to present</small>
+            </div>
         </div>
 
         <div class="stats-summary" id="statsSummary" style="display: none;">
