--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,8 @@
         // Initialize Supabase client
         const SUPABASE_URL = 'https://umnkevrjpbupeuqgdtnu.supabase.co'; // Replace with your Supabase URL
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVtbmtldnJqcGJ1cGV1cWdkdG51Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3NDE1ODcsImV4cCI6MjA3NDMxNzU4N30.zYLQ3ugqbV_ewZ6JZT0OzXL-pgdc0u_q7D0UYK1oySY'; // Replace with your anon key
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        const { createClient } = supabase;
+        const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         
         let map;
         let markers = [];
@@ -144,7 +145,7 @@
             
             try {
                 // Fetch photos from Supabase
-                const { data, error } = await supabase
+                const { data, error } = await supabaseClient
                     .from('user_photos')
                     .select('*')
                     .eq('username', username)
